v0.1 Query1 encaminada